feat: add maven plugin port