@@ -1,6 +1,6 @@
 package com.benjamin.parsy.gentu.core.downloader;
 
-import com.benjamin.parsy.gentu.core.dto.GivenFile;
+import com.benjamin.parsy.gentu.core.GentuLogger;
 import com.benjamin.parsy.gentu.core.dto.TestResult;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -8,24 +8,24 @@ import org.junit.jupiter.api.io.TempDir;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.time.LocalDate;
-import java.time.Month;
 import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class TestReportFileDownloaderImplTest {
 
-    private final TestReportFileDownloaderImpl downloader = new TestReportFileDownloaderImpl();
+    private final TestReportFileDownloaderImpl downloader = new TestReportFileDownloaderImpl(GentuLogger.noOp());
 
     @TempDir
     Path tempDir;
 
     @Test
-    void downloadFile_withEmptyList_shouldNotCreateAnyDirectory() throws IOException {
+    void downloadFile_withEmptyList_shouldNotCreateAnyDirectory() throws IOException, DownloaderException {
 
         // Given
         List<TestResult> results = Collections.emptyList();
@@ -40,69 +40,43 @@ class TestReportFileDownloaderImplTest {
     }
 
     @Test
-    void downloadFile_withResultWithoutFiles_shouldCreateTargetDirectory() {
+    void downloadFile_withResultWithoutFiles_shouldNotCreateDirectory() {
 
         // Given
-        TestResult result = buildTestResult(1, Collections.emptyList());
+        TestResult result = buildTestResult(1, List.of());
 
         // When
         assertDoesNotThrow(() -> downloader.downloadFile(List.of(result), tempDir));
 
         // Then
-        assertTrue(Files.isDirectory(tempDir.resolve("test_1")));
+        assertFalse(Files.exists(tempDir.resolve("test_1")));
     }
 
     @Test
-    void downloadFile_withMultipleResults_shouldCreateOneDirectoryPerResult() {
+    void downloadFile_withMultipleResults_shouldCopyFilesForEachResult() throws IOException {
 
         // Given
+        Path file1 = Files.createTempFile(tempDir, "file1", ".txt");
+        Path file2 = Files.createTempFile(tempDir, "file2", ".txt");
         List<TestResult> results = List.of(
-                buildTestResult(1, Collections.emptyList()),
-                buildTestResult(2, Collections.emptyList()),
-                buildTestResult(3, Collections.emptyList())
+                buildTestResult(1, List.of(file1)),
+                buildTestResult(2, List.of(file2))
         );
 
         // When
         assertDoesNotThrow(() -> downloader.downloadFile(results, tempDir));
 
         // Then
-        assertTrue(Files.isDirectory(tempDir.resolve("test_1")));
-        assertTrue(Files.isDirectory(tempDir.resolve("test_2")));
-        assertTrue(Files.isDirectory(tempDir.resolve("test_3")));
+        assertTrue(Files.exists(tempDir.resolve("test_1").resolve(file1.getFileName())));
+        assertTrue(Files.exists(tempDir.resolve("test_2").resolve(file2.getFileName())));
     }
 
     @Test
-    void downloadFile_withClasspathGivenFile_shouldCopyFileToTargetDirectory() {
-
-        // Given
-        TestResult result = buildTestResult(1, List.of(new GivenFile("testFile.txt", true)));
-
-        // When
-        downloader.downloadFile(List.of(result), tempDir);
-
-        // Then
-        assertTrue(Files.exists(tempDir.resolve("test_1").resolve("testFile.txt")));
-    }
-
-    @Test
-    void downloadFile_withClasspathGivenFileWithLeadingSlash_shouldCopyFileToTargetDirectory() {
-
-        // Given
-        TestResult result = buildTestResult(1, List.of(new GivenFile("testFile.txt", true)));
-
-        // When
-        downloader.downloadFile(List.of(result), tempDir);
-
-        // Then
-        assertTrue(Files.exists(tempDir.resolve("test_1").resolve("testFile.txt")));
-    }
-
-    @Test
-    void downloadFile_withAbsolutePathGivenFile_shouldCopyFileToTargetDirectory() throws IOException {
+    void downloadFile_withExistingFile_shouldCopyFileToTargetDirectory() throws IOException, DownloaderException {
 
         // Given
         Path sourceFile = Files.createTempFile(tempDir, "source", ".txt");
-        TestResult result = buildTestResult(1, List.of(new GivenFile(sourceFile.toString(), false)));
+        TestResult result = buildTestResult(1, List.of(sourceFile));
 
         // When
         downloader.downloadFile(List.of(result), tempDir);
@@ -112,29 +86,26 @@ class TestReportFileDownloaderImplTest {
     }
 
     @Test
-    void downloadFile_withClasspathFileNotFound_shouldNotThrowAndStillCreateDirectory() {
+    void downloadFile_withNonExistentFile_shouldThrowDownloaderException() {
 
         // Given
-        TestResult result = buildTestResult(1, List.of(new GivenFile("classpath:nonexistent.txt", true)));
+        Path nonExistent = tempDir.resolve("does-not-exist.txt");
+        TestResult result = buildTestResult(1, List.of(nonExistent));
 
-        // When
-        assertDoesNotThrow(() -> downloader.downloadFile(List.of(result), tempDir));
-
-        // Then
-        assertTrue(Files.isDirectory(tempDir.resolve("test_1")));
+        // When / Then
+        assertThrows(DownloaderException.class, () -> downloader.downloadFile(List.of(result), tempDir));
     }
 
-    private TestResult buildTestResult(int id, List<GivenFile> givenFiles) {
+    private TestResult buildTestResult(int id, List<Path> files) {
         return new TestResult(
                 id,
                 "testName",
                 "desc",
                 Collections.emptyList(),
-                givenFiles,
+                files,
                 Collections.emptyList(),
                 "TestClass",
-                "testMethod",
-                LocalDate.of(2026, Month.JULY, 9).atStartOfDay()
+                "testMethod"
         );
     }
 
